# bootcampPython

./: pyproject.toml
1-Python Basics/: 1.0-basic.ipynb
